--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -14,13 +14,14 @@
     <a href="/">HOME</a>
     <div>
       <% if (user) { %>
-        <a href="/todos/new">Protected Route</a>&nbsp;&nbsp;
+        <a href="/todos/new">Add a new vehicle</a>&nbsp;&nbsp;
         <a href="/auth/logout">LOG OUT</a>&nbsp;&nbsp;
         <span>Wecome, <%= user.username %></span>
       <% } else { %>
         <a href="/auth/sign-up">SIGN UP</a>
         <a href="/auth/login">LOG IN</a>
       <% } %>
+        <a href="/inventory/">VIEW INVENTORY</a>
       </div>
   </nav>
   <main>
