Add inventory page

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -21,7 +21,7 @@
         <a href="/auth/sign-up">SIGN UP</a>
         <a href="/auth/login">LOG IN</a>
       <% } %>
-        <a href="/inventory/">VIEW INVENTORY</a>
+        <a href="/cars">VIEW INVENTORY</a>
       </div>
   </nav>
   <main>
