--- a/views/auth/login.ejs
+++ b/views/auth/login.ejs
@@ -2,8 +2,8 @@
 
 <h1>Log In</h1>
 <form action="/auth/login" method="POST">
-  <label for="username">Username:</label>
-  <input type="text" required name="username" id="username" />
+  <label for="email">Email:</label>
+  <input type="text" required name="email" id="email" />
   <label for="password">Password:</label>
   <input type="password" required name="password" id="password" />
   <br>
