--- a/views/auth/sign-up.ejs
+++ b/views/auth/sign-up.ejs
@@ -2,8 +2,12 @@
 
 <h1>Sign Up!</h1>
 <form action="/auth/sign-up" method="POST">
-  <label for="username">Username:</label>
-  <input type="text" required name="username" id="username" />
+  <label for="firstName">First Name:</label>
+  <input type="text" required name="firstName" id="firstName" />
+  <label for="lastName">Last Name:</label>
+  <input type="text" required name="lastName" id="lastName" />
+  <label for="email">Email:</label>
+  <input type="text" required name="email" id="email" />
   <label for="password">Password:</label>
   <input type="password" required name="password" id="password" />
   <label for="confirmPassword">Confirm Password:</label>
