--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -13,15 +13,17 @@
     -->
     <a href="/">HOME</a>
     <div>
+      <a href="/cars">VIEW INVENTORY</a>
       <% if (user) { %>
-        <a href="/todos/new">Add a new vehicle</a>&nbsp;&nbsp;
+        <a href="/cars/new">Add NEW VEHICLE</a>&nbsp;&nbsp;
+        <span>Welcome, <%= user.firstName %></span>
         <a href="/auth/logout">LOG OUT</a>&nbsp;&nbsp;
-        <span>Wecome, <%= user.username %></span>
+        
       <% } else { %>
         <a href="/auth/sign-up">SIGN UP</a>
         <a href="/auth/login">LOG IN</a>
       <% } %>
-        <a href="/cars">VIEW INVENTORY</a>
+        
       </div>
   </nav>
   <main>
