update car schema and new car form

--- a/views/cars/new.ejs
+++ b/views/cars/new.ejs
@@ -1,7 +1,7 @@
 <%- include('../partials/header.ejs') %>
 
 <h1>Add a New Vehicle</h1>
-<form action="/users/<%= user._id %>/cars" method="POST">
+<form action="/cars" method="POST">
   <label for="make">Make:</label>
   <input type="text" name="make" id="make" required />
 
