--- a/views/cars/new.ejs
+++ b/views/cars/new.ejs
@@ -16,6 +16,9 @@
 
   <label for="price">Price:</label>
   <input type="text" name="price" id="price" required />
+  
+  <label for="mileage">Mileage:</label>
+  <input type="text" name="mileage" id="mileage" required />
 
   <label for="image">Car Image:</label>
   <input type="file" name="image" id="image" accept="image/*" />
