--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -15,7 +15,7 @@
     <div>
       <a href="/cars">VIEW INVENTORY</a>
       <% if (user) { %>
-        <a href="/cars/new">Add NEW VEHICLE</a>&nbsp;&nbsp;
+        <a href="/cars/new">ADD NEW VEHICLE</a>&nbsp;&nbsp;
         <span>Welcome, <%= user.firstName %></span>
         <a href="/auth/logout">LOG OUT</a>&nbsp;&nbsp;
         
