--- a/public/css/main.css
+++ b/public/css/main.css
@@ -23,11 +23,18 @@ body {
 nav, footer {
   background-color: var(--muted-blue);
   display: flex;
-  justify-content: space-between;
   align-items: center;
   padding: 0 2vmin;
   font-size: 2vh;
   color: var(--light-gray);
+}
+
+nav {
+  justify-content: space-between;
+}
+
+footer {
+  justify-content: center;
 }
 
 /* Navigation Links */
@@ -164,7 +171,7 @@ label {
   display: flex;
   flex-direction: column;
   gap: 2vmin;
-  padding: 2vmin;
+  padding: 0 2vmin 2vmin 2vmin;
   align-items: center; /* Center the content horizontally */
 }
 
@@ -246,33 +253,20 @@ label {
   color: var(--light-gray);
 }
 
-.contact-section {
-  margin-top: 2vmin;
+.story-section {
   width: 100%;
-  display: flex;
-  justify-content: center;
-}
-
-.contact-btn {
-  background-color: var(--muted-blue);
-  color: var(--light-gray);
-  padding: 1.5vmin 3vmin;
-  border-radius: 0.5vmin;
-  text-decoration: none;
+  max-width: 800px;
+  background-color: var(--light-gray);
+  border-radius: 1vmin;
+  padding: 2vmin 4vmin;
+  margin: 0 auto;
   text-align: center;
-  font-size: 1rem;
-  transition: background-color 0.3s;
+  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
+  padding-left: 4vmin; /* Add padding to the left */
+  padding-right: 4vmin; /* Add padding to the right */
 }
 
-.contact-btn:hover {
-  background-color: var(--slate-gray);
-  color: var(--light-gray);
-}
-
-.back-link {
-  display: inline-block;
-  margin-top: 2vmin;
-  text-decoration: none;
-  color: var(--muted-blue);
-  font-size: 1rem;
+.logo {
+  padding-bottom: 4vmin;
+  width: 50vmin;
 }
