--- a/views/cars/show.ejs
+++ b/views/cars/show.ejs
@@ -2,7 +2,7 @@
 
 <main class="car-view">
   <div class="car-details">
-    <img src="/<%= car.image %>" alt="<%= car.make %> <%= car.model %>" />
+    <img src="/<%= car.image %>" alt="<%= car.year %> <%= car.color %> <%= car.make %> <%= car.model %>" />
     <div class="extended-details">
       <h2>Vehicle Details:</h2>
       <ul>
@@ -12,6 +12,7 @@
         <li><strong>Color:</strong> <%= car.color %></li>
         <li><strong>Price:</strong> <%= car.price %></li>
         <li><strong>Mileage:</strong> <%= car.mileage %></li>
+        <li><strong>Added By:</strong> <%= car.addedBy.email %></li>
       </ul>
       <% if (user) { %>
       <div class="car-actions">
@@ -23,13 +24,6 @@
       <% } %>
     </div>
   </div>
-  <div class="contact-section">
-    <a href="/contact" class="btn contact-btn"
-      >Interested in Buying? Contact us!</a
-    >
-  </div>
 </main>
-
-<a href="/cars" class="back-link">Back to All Cars</a>
 
 <%- include('../partials/footer.ejs') %>
