--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -3,8 +3,13 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Authentication</title>
+  <% if (user) { %>
+  <title>Dealer View</title>
+  <% } else { %>
+    <title>Best Cars USA</title>
+    <% } %>
   <link rel="stylesheet" href="/css/main.css">
+  <link rel="icon" type="image/x-icon" href="/img/logo.ico">
 </head>
 <body>
   <nav>
