--- a/views/auth/sign-up.ejs
+++ b/views/auth/sign-up.ejs
@@ -1,6 +1,6 @@
 <%- include('../partials/header.ejs') %>
 
-<h1>Sign Up!</h1>
+<h1>Sign Up</h1>
 <form action="/auth/sign-up" method="POST">
   <label for="firstName">First Name:</label>
   <input type="text" required name="firstName" id="firstName" />
