--- a/views/home.ejs
+++ b/views/home.ejs
@@ -2,12 +2,14 @@
 
 <main class="home-page">
   <section class="logo-section">
-    <img src="/img/logo.jpg" alt="Best Cars USA Logo" class="logo">
+    <img src="/img/logo.png" alt="Best Cars USA Logo" class="logo">
   </section>
 
   <section class="story-section">
-    <h2>Our Story</h2>
-    <p>Welcome to Best Cars USA, your trusted partner in finding the perfect vehicle. Whether you're looking for a classic ride or the latest models, we are here to help you every step of the way.</p>
+    <h2>Hill Family Auto Sales</h2>
+    <p>Welcome to our site!<br><br> 
+      Looking for a used vehicle? Take a look at our <a href="/cars">inventory</a>.<br><br> 
+      Ready to buy? <a href="https://hillfamilyautosales.1234apply.com/templates/9/Main9.aspx">Apply here</a></p>
   </section>
 </main>
 
