--- a/views/home.ejs
+++ b/views/home.ejs
@@ -2,7 +2,7 @@
 
 <main class="home-page">
   <section class="logo-section">
-    <img src="/img/logo.png" alt="Best Cars USA Logo" class="logo">
+    <img src="/img/logo.png" alt="Hill Family Auto Sales Logo" class="logo">
   </section>
 
   <section class="story-section">
