--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,4 +1,4 @@
   </main>
-  <footer>Interested in Buying? Contact us! 1-800-BUY-CARS</footer>
+  <footer>Interested in Buying? Contact us! (870) 869-1030</footer>
 </body>
 </html>
