--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -3,11 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <% if (user) { %>
-  <title>Dealer View</title>
-  <% } else { %>
-    <title>Best Cars USA</title>
-    <% } %>
+  <title>Hill Family Auto Sales</title>
   <link rel="stylesheet" href="/css/main.css">
   <link rel="icon" type="image/x-icon" href="/img/logo.ico">
 </head>
